--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,7 +53,7 @@ a {
 }
 
 .navbar .logo {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   font-weight: 700;
   background: linear-gradient(270deg, #3b82f6, #8b5cf6, #ec4899, #3b82f6);
   background-size: 600% 600%;
@@ -68,7 +68,6 @@ a {
 
 .logo:hover {
   animation: gradientShift 3s ease infinite;
-  /* transform: scale(1.1); */
 }
 
 @keyframes gradientShift {
@@ -398,7 +397,7 @@ a {
   font-weight: bold;
   height: 40px;
   width: 40px;
-  transition: all 0.3s;
+  transition: all 0.3s ease;
 }
 
 .close-popup:hover {
@@ -546,7 +545,6 @@ a {
 
 .copyright {
   text-align: center;
-  margin-top: 40px;
   font-size: 13px;
   color: #888;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
@@ -1264,6 +1262,12 @@ h3 {
 }
 
 /* Responsiveness */
+@media (max-width: 1440px) {
+.button{
+  padding: 10px 20px;
+  font-size: 14px;
+}
+}
 @media (max-width: 1024px) {
   .last {
     gap: 20px;
