--- a/src/styles/experience.module.css
+++ b/src/styles/experience.module.css
@@ -6,25 +6,25 @@
   padding: 2rem;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.6;
-  color: #222;
+  color: var(--dark-text);
   padding-top: 100px;
 }
 
 .infoContainer h1 {
   font-size: 2rem;
-  color: #d35400;
+  color: var(--primary-color);
   margin-bottom: 1rem;
 }
 
 .infoContainer h2 {
   font-size: 1.5rem;
-  color: #2980b9;
+  color: var(--hover-color);
   margin-top: 2rem;
 }
 
 .infoContainer h3 {
   font-size: 1.2rem;
-  color: #16a085;
+  color: var(--active-color);
   margin-top: 1.5rem;
 }
 
@@ -42,7 +42,7 @@
   margin-bottom: 0.3rem;
 }
 
-/*Gallery Section */
+/* Gallery Section */
 .modalOverlay {
   position: fixed;
   top: 0;
@@ -80,11 +80,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: var(--light-text);
 }
+
 .leftArrow,
 .rightArrow {
   position: absolute;
-  background: white;
+  background: var(--light-text);
   font-size: 1.2rem;
   border: none;
   height: 40px;
@@ -105,6 +107,7 @@
   top: 50%;
   right: 30px;
 }
+
 .masonryGallery {
   display: flex;
   gap: 10px;
@@ -150,7 +153,7 @@
   bottom: 10px;
   right: 10px;
   background-color: rgba(0, 0, 0, 0.6);
-  color: #fff;
+  color: var(--light-text);
   padding: 6px 10px;
   border-radius: 8px;
   font-weight: bold;
@@ -181,16 +184,16 @@
   display: flex;
   flex-direction: column;
   font-size: 14px;
-  color: #444;
+  color: var(--dark-text);
 }
 
 .dateInput,
 .travellerInput {
   margin-top: 6px;
   padding: 10px 12px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   border-radius: 8px;
-  background-color: #fff;
+  background-color: var(--light-text);
   font-size: 14px;
   width: 180px;
   transition: all 0.2s ease;
@@ -198,16 +201,16 @@
 
 .dateInput:focus,
 .travellerInput:focus {
-  border-color: #f38a00;
+  border-color: var(--primary-color);
   outline: none;
-  box-shadow: 0 0 0 2px rgba(243, 138, 0, 0.2);
+  box-shadow: 0 0 0 2px rgba(38, 176, 255, 0.2); /* based on --primary-color */
 }
+
 .contentContainer {
   display: flex;
   flex-direction: column;
   max-width: 900px;
 }
-
 
 /* 1024px - Tablet Landscape */
 @media (max-width: 1024px) {
