--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -31,7 +31,7 @@
   justify-content: center;
   text-align: center;
   color: white;
-  background-image: url("../components/animations/HeroImage2.jpg");
+  background-image: url("/images/HeroImage2.jpg");
   background-size: 110%;
   background-position: center;
   background-attachment: fixed;
